--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
                 <img src="./assets/img/posts/Herencia-JS.png" class="section__imagen2" alt="Herencia-JS">
                 <div class="section__container3">
                     <h6 class="fecha section__fecha2"> 24 Noviembre, 2022</h6>
-                    <h4 class="descripcion section_descripcion"> Herencia en JavaScript</h4>
+                    <h4 class="descripcion section__descripcion"> Herencia en JavaScript</h4>
                     <div class="desafioLatam section__desafiolatam">
                         <img src="./assets/img/logos/adl.png" class="section__logodesafio2" alt="adl">
                         <p class="section__desafio2">Desafío Latam</p>
@@ -41,7 +41,7 @@
                     alt="Etiquetas-semánticas-HTML">
                 <div class="section__container3">
                     <h6 class="fecha section__fecha3"> 24 Noviembre, 2022</h6>
-                    <h4 class="descripcion section_descripcion"> Etiquetas semánticas</h4>
+                    <h4 class="descripcion section__descripcion"> Etiquetas semánticas</h4>
                     <div class="desafioLatam section__desafiolatam">
                         <img src="./assets/img/logos/adl.png" class="section__logodesafio2" alt="adl">
                         <p class="section__desafio2">Desafío Latam</p>
@@ -52,7 +52,7 @@
                 <img src="./assets/img/posts/reactComponents.png" class="section__imagen4" alt="reactComponents">
                 <div class="section__container3">
                     <h6 class="fecha section__fecha4"> 24 Noviembre, 2022</h6>
-                    <h4 class="descripcion section_descripcion"> Componentes React</h4>
+                    <h4 class="descripcion section__descripcion"> Componentes React</h4>
                     <div class="desafioLatam section__desafiolatam">
                         <img src="./assets/img/logos/adl.png" class="section__logodesafio2" alt="adl">
                         <p class="section__desafio2">Desafío Latam</p>
