--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <title>Registro</title>
 </head>
 <body>
-    
+    <header class="header">
+        <img src="./assets/img/logos/adl.png" alt="logoadl" class="header__imagen">
+        <h1 class="header__h1">Blog FrontEnd</h1>
+    </header>
+    <section class="forms">
+        <h2 class="forms__welcome">Bienvenido</h2>
+        <div class="forms__register">
+            <input type="name" class="forms__name" id="exampleFormControlInput1" placeholder="Nombre">
+            <input type="lastname" class="forms__lastname" id="exampleFormControlInput1" placeholder="Apellido">
+            <input type="email" class="forms__email" id="exampleFormControlInput1" placeholder="Email">
+            <input type="password" class="forms__password" id="exampleFormControlInput1" placeholder="Contraseña"> 
+            <input type="comfirmpassword" class="forms__confirmpassword" id="exampleFormControlInput1" placeholder="Confirma Contraseña"> 
+        </div>
+        <div class="forms__button">
+            <button type="button" class="forms__button--login">Iniciar Sesion</button>
+            <button type="button" class="forms__button--google">Registrate con Google</button>
+        </div>
+
+    </section>
     
 </body>
 </html>
