page post, page register

--- a/blog.html
+++ b/blog.html
@@ -130,6 +130,15 @@
         </div>
     </article>
 
+    <form class="subscription">
+        <h2 class="subscription__subtitle">Mantente actualizado sobre el</h2>
+        <h2 class="subscription__subtitle2">Desarrollo Front End</h2>
+        <div class="subcription__email">
+            <input type="email" class="subscription__input" id="exampleFormControlInput1" placeholder="Email"> 
+            <button type="button" class="subscription__button--sub">Suscribete</button>
+        </div>
+    </form>
+
     <hr/ class="lineaHorizontal">
     
     <footer class="footer">
