--- a/post.html
+++ b/post.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Post</title>
 </head>
 <body>
@@ -28,16 +29,42 @@
     <article class="relation">
         <h2 class="relation__h2"> Relacionados</h2>
         <div class="relation__container">
-            <img src="./assets/img/posts/vue-components.png" class="relation__imagen" alt="vue-components">
-            <h6 class="fecha relation__fecha"> 24 Noviembre, 2022 </h6>
-            <h4 class="descripcion relation__descripcion"> Componentes Vue </h4>
-            <div class="desafioLatam relation__desafiolatam">
-                <img src="./assets/img/logos/adl.png" class="relation__logodesafio" alt="adl">
-                <p class="relation__desafio">Desafío Latam</p>
+            <div class="relation__block">
+                <img src="./assets/img/posts/vue-components.png" class="relation__imagen" alt="vue-components">
+                <h6 class="fecha relation__fecha"> 24 Noviembre, 2022 </h6>
+                <h4 class="descripcion relation__descripcion"> Componentes Vue </h4>
+                <div class="desafioLatam relation__desafiolatam">
+                    <img src="./assets/img/logos/adl.png" class="relation__logodesafio" alt="adl">
+                    <p class="relation__desafio">Desafío Latam</p>
+                </div>
+            </div>
+            <div class="relation__block">
+                <img src="./assets/img/posts/api-js.png" class="relation__imagen" alt="api-js">
+                <h6 class="fecha relation__fecha"> 24 Noviembre, 2022 </h6>
+                <h4 class="descripcion relation__descripcion"> Consumo de API con JavaScript </h4>
+                <div class="desafioLatam relation__desafiolatam">
+                    <img src="./assets/img/logos/adl.png" class="relation__logodesafio" alt="adl">
+                    <p class="relation__desafio">Desafío Latam</p>
+                </div>
+            </div>
+            <div class="relation__block">
+                <img src="./assets/img/posts/sass.jpg" class="relation__imagen" alt="sass.jpg">
+                <h6 class="fecha relation__fecha"> 24 Noviembre, 2022 </h6>
+                <h4 class="descripcion relation__descripcion"> CSS reutilizable con Sass </h4>
+                <div class="desafioLatam relation__desafiolatam">
+                    <img src="./assets/img/logos/adl.png" class="relation__logodesafio" alt="adl">
+                    <p class="relation__desafio">Desafío Latam</p>
+                </div>
             </div>
         </div>
-
     </article>
+
+    <hr/ class="lineaHorizontal">
+    <footer class="footer">
+        <img src="./assets/img/logos/adl.png" alt="logoadl" class="footer__imagen">
+        <h1 class="footer__h1">Blog FrontEnd</h1>
+        <p class="paragraph">Desafío Latam - 2024</p>
+    </footer>
     
     
 </body>
