--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
             <h2 class="section__h2">Novedades</h2>
             <img src="./assets/img/posts/bootstrap.png" class="section__imagen" alt="bootstrap.png">
             <h6 class="fecha section__fecha"> 24 Noviembre, 2022</h6>
-            <p class="section__contenido">Modifica el tema de Bootstrap con variables CSS</p>
+            <a class="section__link--post" href="./post.html" target="_blank"><p class="section__contenido">Modifica el tema de Bootstrap con variables CSS</p></a>
             <div class="desafioLatam section__desafiolatam">
                 <img src="./assets/img/logos/adl.png" class="section__logodesafio" alt="adl">
                 <p class="section__desafio">Desafío Latam</p>
@@ -67,7 +67,7 @@
     <article class="article">
         <div class="article__container">
             <div class="article__container1">
-                <h2 class="article__h2"> Populares</h2>
+                <a class="article__link--post" href="./post.html" target="_blank"><h2 class="article__h2"> Populares</h2></a>
                 <img src="./assets/img/posts/vue-components.png" class="article__imagen" alt="vue-components">
                 <h6 class="fecha article__fecha"> 24 Noviembre, 2022 </h6>
                 <h4 class="descripcion article__descripcion"> Componentes Vue </h4>
